syntax = "proto3";

package pb;
option go_package = "./;pb";

message TaskModel {
    // @gotags: json:"task_id"
    int64 TaskId = 1;
    // @gotags: json:"user_id"
    int64 UserId = 2;
    // @gotags: json:"status"
    uint32 Status = 3;
    // @gotags: json:"title"
    string Title = 4;
    // @gotags: json:"content"
    string Content = 5;
    // @gotags: json:"start_time"
    uint32 StartTime = 6;
    // @gotags: json:"end_time"
    uint32 EndTime = 7;
}